compiler/tests/en/errors/repeat_step_zero.salam
// EXPECT: E063
func main:
    repeat 1 to 10 by 0:
        __ "x"
    end
end
